# disjoint-mtl

./: .env.example  .gitignore  .gitmodules  LICENSE  experiments.md  export_env.sh  hydra_bash_complete.sh  lsyncd.conf.lua  paper_experiments.md  paper_experiments_short.md  pyproject.toml  readme.md  run_fashion_mnist.py  run_mt_speech_speaker.py  run_mtl_disjoint.py  run_mtl_joint.py  run_speaker.py  run_speech.py  slurm22_requirements.txt  slurm_setup.sh  try_batch_size.py  vox2_ls960h_speakers.json
config/: train_mt_speaker_speech.yaml  train_mtl_disjoint.yaml  train_mtl_joint.yaml  train_speaker.yaml  train_speech.yaml
config/callbacks/: mt_default.yaml  mt_early_stopping.yaml  speaker_default.yaml  speaker_early_stopping.yaml  speech_default.yaml  speech_early_stopping.yaml
config/experiments/: ls_disjoint_speaker_aam.yaml  ls_speaker_960.yaml  ls_speaker_960_aam.yaml  ls_speech_960.yaml  mtl_librispeech_only.yaml  mtl_vox2_ls.yaml  mtl_vox2_ls_dsi.yaml  speaker_aam_4cycle_nofreeze_ch1s_bs64.yaml  speaker_aam_4cycle_nofreeze_ch3s_bs64.yaml  speaker_ce_4cycle_nofreeze_ch3s_bs64.yaml  speech_ctc_3st_freeze.yaml  vox_speaker.yaml
config/network/: mt_wav2vec2.yaml  mtl_disjoint_wav2vec2_ecapa.yaml  (+17 more)
data_utility/: .env.example  .gitignore  README.md  collect_stats.sh  pyproject.toml
data_utility/data_utility/: __init__.py
data_utility/data_utility/eval/speaker/: cosine_dist_evaluator.py  evaluator.py  speaker_eval_metrics.py
data_utility/data_utility/eval/speech/: transform.py  wer.py
data_utility/data_utility/pipe/: __init__.py  _patch.py  builder.py  containers.py  pad.py
data_utility/data_utility/pipe/primitives/: __init__.py  batch.py  chunk.py  shard.py  split.py
data_utility/data_utility/scripts/: collect_statistics.py  convert_to_wav.py  generate_character_distribution.py  generate_character_vocabulary.py  generate_speaker_mapping.py  generate_speaker_trials.py  split_csv.py  transcribe_whisper.py  write_tar_shards.py
data_utility/data_utility/util/: csv.py  validate.py  various.py
data_utility/sets/hub5_2000/: generate_csv.py  readme.md  segment_utterances.py  untar_hub2_2000.sh
data_utility/sets/librispeech/: all_steps.sh  default_generate_meta_files.sh  default_setup_shards.sh  default_write_shards.sh  download_librispeech.sh  generate_csv.py  readme.md  untar_librispeech_archives.sh
data_utility/sets/sre2008/: generate_csv.py  readme.md  rewrite_trials.py  split_upsample_sph.py
data_utility/sets/switchboard/: all_steps.sh  default_generate_meta_files.sh  default_setup_shards.sh  default_write_shards.sh  generate_csv.py  readme.md  stats.txt  switchboard_to_utterances.py  transform_into_utterances.sh  untar_switchboard.sh
data_utility/sets/voxceleb/: all_steps.sh  default_generate_meta_files.sh  default_setup_shards.sh  default_write_shards.sh  download_voxceleb.sh  download_voxceleb_meta.sh  download_voxceleb_transcripts.sh  fix_meta_csv_file.py  fix_trials.py  generate_csv.py  readme.md  transcribe_setup_shards.sh  transcribe_write_shards.sh  unzip_voxceleb_archives.sh
data_utility/sets/voxceleb/slurm/: generate_sbatch.py  write_base.sh  write_large.sh
data_utility/stats/: ls_960h_train.txt  ls_960h_val.txt  ls_dev_clean.txt  ls_dev_other.txt  ls_test_clean.txt  ls_test_other.txt  vox1_test_e.txt  vox1_test_h.txt  vox1_test_o.txt  vox2_dev.txt  vox2_train.txt  vox2_val.txt
fashion_and_mnist/: analysis_ckpt3.ipynb  analyze_init.py  analyze_pruning.py  experiment.py  readme.md
paper/: data.txt  plot_figure.py
playground/: min_example.py  toy_cagrad.py
requirements/: requirements_torch112_cuda113.txt
scripts/: setup_cluster.sh  setup_dependencies.sh  setup_dependencies_with_gpu.sh
snellius/: baseline_asr_5e-3.sbatch
src/: main.py  run_speaker.py
w2v2_prune_analysis/: analyze_pruning_w2v2.py
(+120 files in other folders)
